# pws_auto_tests

./: config.py  pyproject.toml
html_elements/: html_element.py
pages/: blog_page.py  psf_pricing_page.py  pss_pricing_page.py  sa_pricing_page.py
tests/: test_blog.py  test_faq.py
